<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movimientos_ingresar"
            android:icon="@drawable/ic_movimientos_ingresar"
            android:title="@string/nav_movimientos_ingresar" />
        <item
            android:id="@+id/nav_movimientos_actualizar"
            android:icon="@drawable/ic_movimientos_actualizar"
            android:title="@string/nav_movimientos_actualizar" />
        <item
            android:id="@+id/nav_movimientos_eliminar"
            android:icon="@drawable/ic_movimientos_eliminar"
            android:title="@string/nav_movimientos_eliminar" />
        <item
            android:id="@+id/nav_movimientos_listar"
            android:icon="@drawable/ic_movimientos_listar"
            android:title="@string/nav_movimientos_listar" />
    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
