<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movimientos"
            android:icon="@drawable/ic_menu_moviemintos"
            android:title="@string/nav_movimientos" />
        <item
            android:id="@+id/nav_cuentas"
            android:icon="@drawable/ic_menu_caja"
            android:title="@string/nav_cuentas" />
        <item
            android:id="@+id/nav_categoria"
            android:icon="@drawable/ic_menu_categorias"
            android:title="@string/nav_categorias" />
    </group>

    <item android:title="Administrador">
        <menu>

        </menu>
    </item>

</menu>
