<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categorias.fragment_categorias_ingreso"
    android:background="@color/colorForeBlanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageButton
                android:id="@+id/btnCloseCuentas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnrecyclerview"
                android:src="@drawable/ic_action_close" />

            <Button
                android:id="@+id/btn_aplicar_cuentas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:background="@drawable/btnrecyclerview"
                android:text="@string/btn_filtrar_aplicar"
                android:textColor="@color/colorForeFiltro" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/filtro_grosor_de_linea"
                android:background="@drawable/separador"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_campo_nombre"
                android:textSize="10sp"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/filtro_grosor_de_linea"
                android:background="@drawable/separador"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNombreCuenta"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/filtro_grosor_de_linea"
                android:background="@drawable/separador"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta_campo_saldo"
                android:textSize="10sp"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/filtro_grosor_de_linea"
                android:background="@drawable/separador"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <EditText
                android:id="@+id/txtSaldoCuenta"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Saldo Inicial"
                android:inputType="numberDecimal"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>